# inventory

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml
client/: Cargo.toml
client/src/: main.rs
migrations/2018-01-01-053056_create_items/: up.sql
migrations/2018-01-03-043533_create_classes/: down.sql  up.sql
src/: batches.rs  classes.rs  db.rs  main.rs  schema.rs  unit.rs
templates/: base.tera  batches.tera  class_form.tera  classes.tera  index.tera  modify_class.tera
