[package]
name = "inventory"
version = "0.1.0"
authors = ["Mitchell Bruckner <mbruckner807@gmail.com>"]

[dependencies]
rocket = "0.3.5"
rocket_codegen = "0.3.5"
diesel = { version = "0.99.0", features=["sqlite"] }
dotenv = "0.10.0"
r2d2 = "0.8.2"
r2d2-diesel = "0.99.0"
serde = "*"
serde_derive = "*"

[dependencies.rocket_contrib]
version = "0.3.5"
features = ["tera_templates", "json"]
